--- a/ScoreCard/MainWindow.xaml
+++ b/ScoreCard/MainWindow.xaml
@@ -65,7 +65,17 @@
                                                 <ColumnDefinition Width="*"/>
                                             </Grid.ColumnDefinitions>
                                             <Border BorderThickness="1,0,1,1" BorderBrush="{StaticResource BorderBrush}">
-                                                <TextBlock Text="{Binding Name}" Background="LightBlue" Padding="2"/>
+                                                <TextBlock Text="{Binding Name}" Background="LightBlue" Padding="2">
+                                                    <TextBlock.Style>
+                                                        <Style TargetType="TextBlock">
+                                                            <Style.Triggers>
+                                                                <DataTrigger Binding="{Binding IsPartOfAccusation}" Value="True">
+                                                                    <Setter Property="Foreground" Value="Red"/>
+                                                                </DataTrigger>
+                                                            </Style.Triggers>
+                                                        </Style>
+                                                    </TextBlock.Style>
+                                                </TextBlock>
                                             </Border>
                                             <ItemsControl ItemsSource="{Binding Possibilities}" Grid.Column="1">
                                                 <ItemsControl.ItemsPanel>
