--- a/ScoreCard/SuggestionResponseDialog.xaml
+++ b/ScoreCard/SuggestionResponseDialog.xaml
@@ -8,7 +8,7 @@
         d:DataContext="{d:DesignInstance Type=local:DialogViewModelDesignData, IsDesignTimeCreatable=True}"
         Title="Suggestion Response" Height="300" Width="300">
     <DockPanel LastChildFill="True">
-        <TextBlock DockPanel.Dock="Top" Text="{Binding Responder.Name, StringFormat='Response from {0}'}"/>
+        <TextBlock DockPanel.Dock="Top" Text="{Binding Responder.Name, StringFormat='Response from {0}'}" Margin="10" HorizontalAlignment="Center" FontSize="20"/>
         <UniformGrid DockPanel.Dock="Bottom">
             <UniformGrid.Style>
                 <Style TargetType="UniformGrid">
@@ -23,6 +23,7 @@
             <UniformGrid.Resources>
                 <Style TargetType="Button" x:Key="ResultButton">
                     <Setter Property="Margin" Value="5"/>
+                    <Setter Property="Padding" Value="5"/>
                 </Style>
             </UniformGrid.Resources>
             <Button Content="None" Style="{StaticResource ResultButton}"
@@ -54,10 +55,15 @@
             </ItemsControl.ItemsPanel>
             <ItemsControl.ItemTemplate>
                 <DataTemplate>
-                    <Button Content="{Binding Name, StringFormat='Has {0}'}"
-                            Command="{Binding CloseWithCard, RelativeSource={RelativeSource AncestorType=local:SuggestionResponseDialog}}"
+                    <Button Command="{Binding CloseWithCard, RelativeSource={RelativeSource AncestorType=local:SuggestionResponseDialog}}"
                             CommandParameter="{Binding .}"
-                            Margin="5"/>
+                            Margin="5" Width="80" Height="120">
+                        <TextBlock Text="{Binding Name}">
+                            <TextBlock.LayoutTransform>
+                                <RotateTransform Angle="-60"/>
+                            </TextBlock.LayoutTransform>
+                        </TextBlock>
+                    </Button>
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
         </ItemsControl>
